--- a/src-ap-vb3/doc/src-ap-vb3-introduction.dita
+++ b/src-ap-vb3/doc/src-ap-vb3-introduction.dita
@@ -9,10 +9,10 @@
     can be used for the source code of reference metadata authored with
     VocBench3. The scope of the application profile is originally intended
     for, but not limited to, the reference metadata assets managed by the
-    Publications Office of the European Union. <i>Reference metadata
-    assets</i> refer to thesauri, taxonomies, authority tables, reference
-    tables, controlled vocabularies, etc. Examples of such assets maintained
-    by the Publications Office are <xref format="html"
+    Publications Office of the European Union. <term>Reference metadata</term>
+    assets refer to thesauri, taxonomies, authority tables, reference tables,
+    controlled vocabularies, etc. Examples of such assets maintained by the
+    Publications Office are <xref format="html"
     href="https://publications.europa.eu/web/eu-vocabularies/th-dataset/-/resource/dataset/eurovoc"
     scope="external">EuroVoc</xref> thesaurus, <xref format="html"
     href="https://publications.europa.eu/web/eu-vocabularies/at-dataset/-/resource/dataset/corporate-body"
@@ -23,30 +23,32 @@
     scope="external">Country</xref> authority lists. The complete list of
     assets can be found on <xref format="html"
     href="https://publications.europa.eu/en/web/eu-vocabularies/home"
-    scope="external">EU Vocabularies Website</xref>. </p>
+    scope="external">EU Vocabularies Website</xref>.</p>
 
-    <p> </p>
-
-    <p>An <i>Application Profile (AP)</i> is a specification that re-uses
-    terms from one or more base standards, adding more specificity by
+    <p>An <term>Application Profile</term> (AP) is a specification that
+    re-uses terms from one or more base standards, adding more specificity by
     identifying mandatory, recommended and optional elements to be used for a
     particular application, as well as recommendations for controlled
-    vocabularies to be used. </p>
+    vocabularies to be used.</p>
 
     <p>The Application Profile specified in this document is based on the
     specification of the <xref format="html"
-    href="https://www.w3.org/TR/skos-reference/" scope="external"><i>Simple
-    Knowledge Organization System (SKOS)</i></xref>. SKOS is an <xref
-    format="html" href="https://www.w3.org/TR/rdf11-concepts/"
-    scope="external">RDF</xref> vocabulary designed to facilitate
-    interoperability between controlled vocabularies published on the Web as
-    Linked Open Data. Additional classes and properties from other well-known
-    vocabularies are re-used where necessary. </p>
+    href="https://www.w3.org/TR/skos-reference/" scope="external"><term>Simple
+    Knowledge Organization System (SKOS)</term></xref><fn>Bechhofer, S., &amp;
+    Miles, A. (2009). SKOS Simple Knowledge Organization System Reference.
+    </fn>. SKOS is an <xref format="html"
+    href="https://www.w3.org/TR/rdf11-concepts/"
+    scope="external"><term>RDF</term></xref><fn>Wood, D., Lanthaler, M., &amp;
+    Cyganiak, R. (2014). RDF 1.1 Concepts and Abstract Syntax.</fn> vocabulary
+    designed to facilitate interoperability between controlled vocabularies
+    published on the Web as Linked Open Data. Additional classes and
+    properties from other well-known vocabularies are re-used where
+    necessary.</p>
 
     <p>The work does not cover implementation issues like mechanisms for edit
     or publish controlled vocabularies and expected behaviour of systems
     implementing the Application Profile other than what is defined in the
-    Conformance Statement. </p>
+    Conformance Statement.</p>
 
     <p>The Application Profile is intended to facilitate controlled
     vocabularies exchange and therefore the classes and properties defined in
@@ -54,6 +56,6 @@
     exchanged; there are no requirements for communicating systems to
     implement specific technical environments. The only requirement is that
     the systems can export and import data in RDF in conformance with this
-    Application Profile. </p>
+    Application Profile.</p>
   </body>
 </topic>
