--- a/src-ap-vb3/doc/src-ap-vb3.ditamap
+++ b/src-ap-vb3/doc/src-ap-vb3.ditamap
@@ -2,10 +2,51 @@
 <!DOCTYPE map PUBLIC "-//OASIS//DTD DITA Map//EN"
 "map.dtd">
 <map>
-  <title>SRC-AP-VB3: Application Profile for Assets maintained in
+  <title>SRC-AP-VB3: an application profile for metadata assets maintained in
   VocBench3</title>
 
-  <topicref href="src-ap-vb3-introduction.dita"/>
+  <topicmeta>
+    <author>Eugeniu Costetchi</author>
 
-  <topicref href="src-ap-vb3.dita"/>
+    <publisher>Publications Office of the European Union</publisher>
+
+    <critdates>
+      <created date="10/09/2019"/>
+
+      <revised modified="13/09/2019"/>
+    </critdates>
+
+    <prodinfo>
+      <prodname>SRC-AP-VB3</prodname>
+
+      <vrmlist>
+        <vrm version="Version 1.0"/>
+      </vrmlist>
+    </prodinfo>
+  </topicmeta>
+
+  <keydef href="ap-terminology.dita#ap-terminology" keys="terminology"/>
+
+  <keydef href="src-ap-vb3-used-vocabularies.dita#src-ap-vb3-used-vocabularies"
+          keys="vocabulary"/>
+
+  <keydef href="ap-controlled-vocabulary-requirements.dita#ap-controlled-vocabulary-requirements"
+          keys="cv-req"/>
+
+  <topicref href="src-ap-vb3-introduction.dita#src-ap-vb3-introduction"/>
+
+  <topicref href="src-ap-vb3-context.dita#src-ap-vb3-context"/>
+
+  <topicref href="ap-terminology.dita#ap-terminology"/>
+
+  <topicref href="src-ap-vb3-used-vocabularies.dita#src-ap-vb3-used-vocabularies"/>
+
+  <topicref href="src-ap-vb3-graphical-representation.dita#src-ap-vb3-graphical-representation"/>
+
+  <topicref href="src-ap-vb3.dita" locktitle="yes"
+            navtitle="SPC-AP-VB3 application profile specification"/>
+
+  <topicref href="ap-controlled-vocabulary-requirements.dita#ap-controlled-vocabulary-requirements"/>
+
+  <topicref href="src-ap-vb3-controlled-vocabularies.dita#src-ap-vb3-controlled-vocabularies"/>
 </map>
