--- a/src-ap-vb3/doc/src-ap-vb3-graphical-representation.dita
+++ b/src-ap-vb3/doc/src-ap-vb3-graphical-representation.dita
@@ -2,7 +2,7 @@
 <!DOCTYPE topic PUBLIC "-//OASIS//DTD DITA Topic//EN"
 "topic.dtd">
 <topic id="src-ap-vb3-graphical-representation">
-  <title>Graphical representation of the application profile</title>
+  <title>Graphical representation</title>
 
   <body>
     <p>The graphical representation of the Application Profile is provided in
