--- a/src-ap-vb3/doc/ap-terminology.dita
+++ b/src-ap-vb3/doc/ap-terminology.dita
@@ -2,7 +2,7 @@
 <!DOCTYPE topic PUBLIC "-//OASIS//DTD DITA Topic//EN"
 "topic.dtd">
 <topic id="ap-terminology">
-  <title>Terminology used in the application profile</title>
+  <title>Terminology used</title>
 
   <body>
     <p>In the following sections, classes and properties are grouped under
