--- a/src-ap-vb3/doc/src-ap-vb3-introduction.dita
+++ b/src-ap-vb3/doc/src-ap-vb3-introduction.dita
@@ -5,14 +5,33 @@
   <title>Introduction</title>
 
   <body>
-    <p>This objective of this work is to define an Application Profile that
-    can be used for the source code of reference metadata authored with
-    VocBench3. The scope of the application profile is originally intended
-    for, but not limited to, the reference metadata assets managed by the
-    Publications Office of the European Union. <term>Reference metadata</term>
-    assets refer to thesauri, taxonomies, authority tables, reference tables,
-    controlled vocabularies, etc. Examples of such assets maintained by the
-    Publications Office are <xref format="html"
+    <p>This document defines the application profile of SKOS assets managed
+    using the VocBench3<fn> Stellato, A., Fiorelli, M., Turbati, A.,
+    Lorenzetti, T., Van Gemert, W.,Dechandon, D., Laaboudi-Spoiden, C.,
+    Gerencser, A., Waniart, A.,Costetchi, E., and Keizer, J. (forthcoming).
+    VocBench 3: a Collab-orative Semantic Web Editor for Ontologies, Thesauri
+    and Lexicons.Semantic Web journal. <xref format="html"
+    href="http://www.semantic-web-journal.net/content/vocbench-3-collaborative-semantic-web-editor-ontologies-thesauri-and-lexicons-1"
+    scope="external">link</xref></fn>. <term>VocBench3</term> is a web-based,
+    multilingual, collaborative development platform for managing OWL
+    ontologies, SKOS(XL) thesauri and generic RDF datasets. <term>SKOS</term>
+    is a common data model for sharing and linking knowledge organization
+    systems via the Web. The SKOS data model provides a standard, low-cost
+    migration path for porting existing knowledge organization systems to the
+    Semantic Web. SKOS also provides a lightweight, intuitive language for
+    developing and sharing new knowledge organization systems. It may be used
+    on its own, or in combination with formal knowledge representation
+    languages such as the Web Ontology language (OWL)<fn>Bechhofer, S., &amp;
+    Miles, A. (2009). SKOS Simple Knowledge Organization System Reference.
+    <xref format="html" href="https://www.w3.org/TR/skos-reference/"
+    scope="external">https://www.w3.org/TR/skos-reference/</xref></fn>.</p>
+
+    <p>The scope of the application profile is originally intended for, but
+    not limited to, the reference metadata assets managed by the Publications
+    Office of the European Union. <term>Reference metadata</term> assets refer
+    to thesauri, taxonomies, authority tables, reference tables, controlled
+    vocabularies, etc. Examples of such assets maintained by the Publications
+    Office are <xref format="html"
     href="https://publications.europa.eu/web/eu-vocabularies/th-dataset/-/resource/dataset/eurovoc"
     scope="external">EuroVoc</xref> thesaurus, <xref format="html"
     href="https://publications.europa.eu/web/eu-vocabularies/at-dataset/-/resource/dataset/corporate-body"
@@ -32,12 +51,8 @@
     vocabularies to be used.</p>
 
     <p>The Application Profile specified in this document is based on the
-    specification of the <xref format="html"
-    href="https://www.w3.org/TR/skos-reference/" scope="external"><term>Simple
-    Knowledge Organization System (SKOS)</term></xref><fn>Bechhofer, S., &amp;
-    Miles, A. (2009). SKOS Simple Knowledge Organization System Reference.
-    </fn>. SKOS is an <xref format="html"
-    href="https://www.w3.org/TR/rdf11-concepts/"
+    specification of the Simple Knowledge Organization System (SKOS). SKOS is
+    an <xref format="html" href="https://www.w3.org/TR/rdf11-concepts/"
     scope="external"><term>RDF</term></xref><fn>Wood, D., Lanthaler, M., &amp;
     Cyganiak, R. (2014). RDF 1.1 Concepts and Abstract Syntax.</fn> vocabulary
     designed to facilitate interoperability between controlled vocabularies
