* advance on writing the src-ap-vb3

--- a/src-ap-vb3/doc/src-ap-vb3-context.dita
+++ b/src-ap-vb3/doc/src-ap-vb3-context.dita
@@ -13,7 +13,7 @@
 
     <ul>
       <li>EuroVoc team, in charge of the maintenance of EuroVoc thesaurus, and
-      the publication and dissemination of thesaurus maintained by other EU
+      the publication and dissemination of thesauri maintained by other EU
       institutions.</li>
 
       <li>MDR team, in charge of the maintenance and dissemination of the
