--- a/src-ap-vb3/doc/src-ap-vb3.dita
+++ b/src-ap-vb3/doc/src-ap-vb3.dita
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?><!DOCTYPE reference PUBLIC "-//OASIS//DTD DITA Reference//EN" "technicalContent/dtd/reference.dtd">
-<reference id="EA_Model18x05x34x02x00">
+<reference id="EA_Model16x56x26x02x00">
 	<title>src-ap-vb3.xmi</title>
 	<refbody>
 		<section>
@@ -71,7 +71,7 @@ Like the skosxl:Label class reifies SKOS label statements, XlNotation reifies SK
 							</entry>
 						</row>
 						<row rowsep="1">
-							<entry colname="1">dct:type</entry>
+							<entry colname="1"/>
 							<entry colname="2">skos:Concept</entry>
 							<entry colname="3">1..1</entry>
 							<entry colname="4">Specify the context where a specified notation is considered unique. </entry>
@@ -155,19 +155,37 @@ Like the skosxl:Label class reifies SKOS label statements, XlNotation reifies SK
 					</thead>
 					<tbody>
 						<row rowsep="1">
-							<entry colname="1">skos:member</entry>
+							<entry colname="1">dct:created</entry>
+							<entry colname="2">xsd:date</entry>
+							<entry colname="3">0..1</entry>
+							<entry colname="4"/>
+						</row>
+						<row rowsep="1">
+							<entry colname="1">dct:modified</entry>
+							<entry colname="2">xsd:date</entry>
+							<entry colname="3">0..1</entry>
+							<entry colname="4"/>
+						</row>
+						<row rowsep="1">
+							<entry colname="1"/>
 							<entry colname="2">skos:Collectioon</entry>
 							<entry colname="3">0..*</entry>
 							<entry colname="4"/>
 						</row>
 						<row rowsep="1">
-							<entry colname="1">skos:member</entry>
+							<entry colname="1"/>
 							<entry colname="2">skos:Concept</entry>
 							<entry colname="3">0..*</entry>
 							<entry colname="4"/>
 						</row>
 						<row rowsep="1">
-							<entry colname="1">skos:member</entry>
+							<entry colname="1"/>
+							<entry colname="2">skosxl:Label</entry>
+							<entry colname="3">1..*</entry>
+							<entry colname="4"/>
+						</row>
+						<row rowsep="1">
+							<entry colname="1"/>
 							<entry colname="2">skos:Collectioon</entry>
 							<entry colname="3">0..*</entry>
 							<entry colname="4"/>
@@ -253,25 +271,37 @@ Note that, because SKOS is designed to be a vehicle for representing semi-formal
 							</entry>
 						</row>
 						<row rowsep="1">
-							<entry colname="1">skos:inScheme</entry>
+							<entry colname="1"/>
 							<entry colname="2">skos:ConceptScheme</entry>
 							<entry colname="3">1..*</entry>
 							<entry colname="4">A concept scheme in which the concept is included. A concept may be a member of more than one concept scheme.</entry>
 						</row>
 						<row rowsep="1">
-							<entry colname="1">skos:definition</entry>
+							<entry colname="1"/>
 							<entry colname="2">euvoc:XlNote</entry>
 							<entry colname="3">0..*</entry>
 							<entry colname="4">A statement or formal explanation of the meaning of a concept.</entry>
 						</row>
 						<row rowsep="1">
-							<entry colname="1">skos:historyNote</entry>
+							<entry colname="1"/>
+							<entry colname="2">skos:Concept</entry>
+							<entry colname="3">0..*</entry>
+							<entry colname="4"/>
+						</row>
+						<row rowsep="1">
+							<entry colname="1"/>
 							<entry colname="2">euvoc:XlNote</entry>
 							<entry colname="3">0..*</entry>
 							<entry colname="4">A note about the past state/use/meaning of a concept.</entry>
 						</row>
 						<row rowsep="1">
-							<entry colname="1">skos:broader</entry>
+							<entry colname="1"/>
+							<entry colname="2">skos:Concept</entry>
+							<entry colname="3">0..*</entry>
+							<entry colname="4"/>
+						</row>
+						<row rowsep="1">
+							<entry colname="1"/>
 							<entry colname="2">skos:Concept</entry>
 							<entry colname="3">0..*</entry>
 							<entry colname="4">A concept that is more general in meaning.
@@ -279,75 +309,105 @@ Note that, because SKOS is designed to be a vehicle for representing semi-formal
 Broader concepts are typically rendered as parents in a concept hierarchy (tree).</entry>
 						</row>
 						<row rowsep="1">
-							<entry colname="1">skos:example</entry>
+							<entry colname="1"/>
 							<entry colname="2">euvoc:XlNote</entry>
 							<entry colname="3">0..*</entry>
 							<entry colname="4">An example of the use of a concept.</entry>
 						</row>
 						<row rowsep="1">
-							<entry colname="1">dct:isReplacedBy</entry>
+							<entry colname="1"/>
 							<entry colname="2">skos:Concept</entry>
 							<entry colname="3">0..*</entry>
 							<entry colname="4">A related resource that supplants, displaces, or supersedes the described resource. 
 </entry>
 						</row>
 						<row rowsep="1">
-							<entry colname="1">skosxl:altLabel</entry>
+							<entry colname="1"/>
+							<entry colname="2">skos:Concept</entry>
+							<entry colname="3">0..*</entry>
+							<entry colname="4"/>
+						</row>
+						<row rowsep="1">
+							<entry colname="1"/>
+							<entry colname="2">skos:Concept</entry>
+							<entry colname="3">0..*</entry>
+							<entry colname="4"/>
+						</row>
+						<row rowsep="1">
+							<entry colname="1"/>
+							<entry colname="2">skos:Concept</entry>
+							<entry colname="3">0..*</entry>
+							<entry colname="4"/>
+						</row>
+						<row rowsep="1">
+							<entry colname="1"/>
 							<entry colname="2">skosxl:Label</entry>
 							<entry colname="3">0..*</entry>
 							<entry colname="4">An alternative lexical label for a resource. Acronyms, abbreviations, spelling variants, and irregular plural/singular forms may be included among the alternative labels for a concept. </entry>
 						</row>
 						<row rowsep="1">
-							<entry colname="1">skosxl:hiddenLabel</entry>
+							<entry colname="1"/>
 							<entry colname="2">skosxl:Label</entry>
 							<entry colname="3">0..*</entry>
 							<entry colname="4">A lexical label for a resource that should be hidden when generating visual displays of the resource, but should still be accessible to free text search operations. Mis-spelled terms are normally included as hidden labels.</entry>
 						</row>
 						<row rowsep="1">
-							<entry colname="1">skos:topConceptOf</entry>
+							<entry colname="1"/>
 							<entry colname="2">skos:ConceptScheme</entry>
 							<entry colname="3">0..*</entry>
 							<entry colname="4">The property skos:hasTopConcept is, by convention, used to link a concept scheme to the SKOS concept(s) which are topmost in the hierarchical relations for that scheme.</entry>
 						</row>
 						<row rowsep="1">
-							<entry colname="1">skosxl:prefLabel</entry>
+							<entry colname="1"/>
 							<entry colname="2">skosxl:Label</entry>
 							<entry colname="3">1..*</entry>
 							<entry colname="4">The preferred lexical label for a resource, in a given language. No two concepts in the same concept scheme may have the same preferred label in a given language. 
 </entry>
 						</row>
 						<row rowsep="1">
-							<entry colname="1">skos:notation</entry>
+							<entry colname="1"/>
 							<entry colname="2">euvoc:XlNotation</entry>
 							<entry colname="3">0..*</entry>
 							<entry colname="4">A notation is a string of characters such as "T58.5" or "303.4833" used to uniquely identify a concept within the scope of a given concept scheme or within a specified context.</entry>
 						</row>
 						<row rowsep="1">
-							<entry colname="1">skos:related</entry>
+							<entry colname="1"/>
 							<entry colname="2">skos:Concept</entry>
 							<entry colname="3">0..*</entry>
 							<entry colname="4">A concept with which there is an associative semantic relationship.</entry>
 						</row>
 						<row rowsep="1">
-							<entry colname="1">skos:changeNote</entry>
+							<entry colname="1"/>
 							<entry colname="2">euvoc:XlNote</entry>
 							<entry colname="3">0..*</entry>
 							<entry colname="4">A note about a modification to a concept.</entry>
 						</row>
 						<row rowsep="1">
-							<entry colname="1">skos:editorialNote</entry>
+							<entry colname="1"/>
 							<entry colname="2">euvoc:XlNote</entry>
 							<entry colname="3">0..*</entry>
 							<entry colname="4">A note for an editor, translator or maintainer of the vocabulary.</entry>
 						</row>
 						<row rowsep="1">
-							<entry colname="1">skos:scopeNote</entry>
+							<entry colname="1"/>
 							<entry colname="2">euvoc:XlNote</entry>
 							<entry colname="3">0..*</entry>
 							<entry colname="4">A note that helps to clarify the meaning of a concept.</entry>
 						</row>
 						<row rowsep="1">
-							<entry colname="1">skos:broader</entry>
+							<entry colname="1"/>
+							<entry colname="2">skos:Concept</entry>
+							<entry colname="3">0..*</entry>
+							<entry colname="4"/>
+						</row>
+						<row rowsep="1">
+							<entry colname="1"/>
+							<entry colname="2">skos:Concept</entry>
+							<entry colname="3">0..*</entry>
+							<entry colname="4"/>
+						</row>
+						<row rowsep="1">
+							<entry colname="1"/>
 							<entry colname="2">skos:Concept</entry>
 							<entry colname="3">0..*</entry>
 							<entry colname="4">A concept that is more general in meaning.
@@ -355,14 +415,32 @@ Broader concepts are typically rendered as parents in a concept hierarchy (tree)
 Broader concepts are typically rendered as parents in a concept hierarchy (tree).</entry>
 						</row>
 						<row rowsep="1">
-							<entry colname="1">dct:isReplacedBy</entry>
+							<entry colname="1"/>
 							<entry colname="2">skos:Concept</entry>
 							<entry colname="3">0..*</entry>
 							<entry colname="4">A related resource that supplants, displaces, or supersedes the described resource. 
 </entry>
 						</row>
 						<row rowsep="1">
-							<entry colname="1">skos:related</entry>
+							<entry colname="1"/>
+							<entry colname="2">skos:Concept</entry>
+							<entry colname="3">0..*</entry>
+							<entry colname="4"/>
+						</row>
+						<row rowsep="1">
+							<entry colname="1"/>
+							<entry colname="2">skos:Concept</entry>
+							<entry colname="3">0..*</entry>
+							<entry colname="4"/>
+						</row>
+						<row rowsep="1">
+							<entry colname="1"/>
+							<entry colname="2">skos:Concept</entry>
+							<entry colname="3">0..*</entry>
+							<entry colname="4"/>
+						</row>
+						<row rowsep="1">
+							<entry colname="1"/>
 							<entry colname="2">skos:Concept</entry>
 							<entry colname="3">0..*</entry>
 							<entry colname="4">A concept with which there is an associative semantic relationship.</entry>
@@ -422,26 +500,26 @@ Thesauri, classification schemes, subject heading lists, taxonomies, 'folksonomi
 							</entry>
 						</row>
 						<row rowsep="1">
-							<entry colname="1">euvoc:domain</entry>
+							<entry colname="1"/>
 							<entry colname="2">skos:Concept</entry>
 							<entry colname="3">0..1</entry>
 							<entry colname="4">Indicates the subject of the controlled vocabulary. 
 This property has a similar function as the dct:subject and dcat:theme. </entry>
 						</row>
 						<row rowsep="1">
-							<entry colname="1">dct:isPartOf</entry>
+							<entry colname="1"/>
 							<entry colname="2">skos:ConceptScheme</entry>
 							<entry colname="3">0..*</entry>
 							<entry colname="4">A related resource in which the described resource is physically or logically included.</entry>
 						</row>
 						<row rowsep="1">
-							<entry colname="1">skosxl:prefLabel</entry>
+							<entry colname="1"/>
 							<entry colname="2">skosxl:Label</entry>
 							<entry colname="3">1..*</entry>
 							<entry colname="4">The preferred lexical label for a resource, in a given language. No two concepts in the same concept scheme may have the same preferred label in a given language. </entry>
 						</row>
 						<row rowsep="1">
-							<entry colname="1">dct:isPartOf</entry>
+							<entry colname="1"/>
 							<entry colname="2">skos:ConceptScheme</entry>
 							<entry colname="3">0..*</entry>
 							<entry colname="4">A related resource in which the described resource is physically or logically included.</entry>
@@ -511,6 +589,14 @@ If two instances of the class skosxl:Label have the same literal form, they are 
 							</entry>
 						</row>
 						<row rowsep="1">
+							<entry colname="1">owl:versionInfo</entry>
+							<entry colname="2">rdfs:Literal</entry>
+							<entry colname="3">0..1</entry>
+							<entry colname="4">
+								<p>An owl:versionInfo statement generally has as its object a string giving information about this version. This statement does not contribute to the logical meaning of the resource.</p>
+							</entry>
+						</row>
+						<row rowsep="1">
 							<entry colname="1">skosxl:literalForm</entry>
 							<entry colname="2">rdfs:Literal</entry>
 							<entry colname="3">1..1</entry>
@@ -519,7 +605,7 @@ If two instances of the class skosxl:Label have the same literal form, they are 
 							</entry>
 						</row>
 						<row rowsep="1">
-							<entry colname="1">dct:type</entry>
+							<entry colname="1"/>
 							<entry colname="2">skos:Concept</entry>
 							<entry colname="3">0..1</entry>
 							<entry colname="4">Specify the context where a specified notation is considered unique. 
