--- a/doc-common/ap-skos-versioning.dita
+++ b/doc-common/ap-skos-versioning.dita
@@ -8,25 +8,24 @@
     <p>SKOS is a common data model for sharing and linking knowledge
     organization systems via the Web. It describes means to define concepts
     and organise them in concept schemes but omits to specify anything about
-    how such organisation should evolve over time.</p>
-
-    <p>There has been discussions and work done to address this issue. A list
-    of references on this topic is available on W3C wiki <fn>
-    SKOS/Issues/ConceptEvolution. <xref format="html"
+    how such organisation should evolve over time. A series of attempts was
+    done to address this issue and a list of references is available on W3C
+    wiki <fn> SKOS/Issues/ConceptEvolution. <xref format="html"
     href="https://www.w3.org/2001/sw/wiki/SKOS/Issues/ConceptEvolution"
     scope="external">https://www.w3.org/2001/sw/wiki/SKOS/Issues/ConceptEvolution</xref></fn></p>
 
     <p>. This section reflects the result of discussions in the MDR team of
     the Publications Office and addresses a few issues related to evolution of
     digital assets based on SKOS model. The solutions described below have
-    informative purpose and should in no way be considered normative.</p>
+    informative purpose and are not part of the application profile.</p>
 
-    <section><title>Preliminary questions</title><p>It is difficult to talk
-    about temporal evolution of SKOS assets as a whole and therefore of
-    concepts and concept schemes in particular without quickly sliding into
-    the classic problems in metaphysics<fn>van Inwagen, Peter and Sullivan,
-    Meghan, "Metaphysics", The Stanford Encyclopedia of Philosophy (Spring
-    2018 Edition), Edward N. Zalta (ed.), <xref format="html"
+    <section><title>Preliminary questions</title><p>Discussing the temporal
+    evolution of SKOS assets is not a trivial task. It can be approached as a
+    whole concept scheme or at the level of individual concepts. Regardless of
+    the approach it is difficult to avoid sliding into the classic problems in
+    metaphysics<fn>van Inwagen, Peter and Sullivan, Meghan, "Metaphysics", The
+    Stanford Encyclopedia of Philosophy (Spring 2018 Edition), Edward N. Zalta
+    (ed.), <xref format="html"
     href="https://plato.stanford.edu/archives/spr2018/entries/metaphysics/"
     scope="external">https://plato.stanford.edu/archives/spr2018/entries/metaphysics/</xref></fn>
     related to time<fn>Markosian, Ned, "Time", The Stanford Encyclopedia of
@@ -43,20 +42,17 @@
     Zalta (ed.), <xref format="html"
     href="https://plato.stanford.edu/archives/fall2018/entries/identity-relative/"
     scope="external">https://plato.stanford.edu/archives/fall2018/entries/identity-relative/</xref></fn>.
-    An alternative and perhaps a useful way of escaping the metaphysical
-    distinctions is taking a semiotic<fn>Atkin, Albert, "Peirce's Theory of
-    Signs", The Stanford Encyclopedia of Philosophy (Summer 2013 Edition),
-    Edward N. Zalta (ed.), <xref format="html"
+    Although, an alternative and perhaps a useful way of escaping the
+    metaphysical distinctions is taking a semiotic<fn>Atkin, Albert, "Peirce's
+    Theory of Signs", The Stanford Encyclopedia of Philosophy (Summer 2013
+    Edition), Edward N. Zalta (ed.), <xref format="html"
     href="https://plato.stanford.edu/archives/sum2013/entries/peirce-semiotics/"
     scope="external">https://plato.stanford.edu/archives/sum2013/entries/peirce-semiotics/</xref>.</fn>
     standpoint and think about the evolution of signs, "external reality"
-    things and "mental" concepts. Hence it is useful to make a few
-    distinctions between kinds of described things/entities as the outcome of
-    such clarification will naturally lead to a versioning and evolution
-    strategy for the asset at hand. </p><p>Next are provided a few competency
-    questions aimed at clarifying the nature of the asset at hand and thus
-    getting one step closer in making a choice in the versioning strategy that
-    will be outlined later.</p><ul>
+    things and "mental" concepts.</p><p>In the course of Next are provided a
+    few competency questions aimed at clarifying the nature of the asset at
+    hand and thus getting one step closer in making a choice in the versioning
+    strategy that will be outlined later.</p><ul>
         <li>What is the level of abstraction of managed concepts? Do the
         concepts represent entities/individuals or more abstract classes of
         things?</li>
@@ -84,51 +80,43 @@
     simple knowledge organization system for concept management in vocabulary
     development applications. J. Am. Soc. Inf. Sci., 59: 25-37. doi:<xref
     format="html" href=" https://doi.org/10.1002/asi.20702"
-    scope="external">10.1002/asi.20702</xref></fn>. This approach, which
-    suggests describing concepts at two levels (abstract and concrete) is
-    clean and straight forward way of distinguishing transient from
-    intransigent things. However, an additional level of complexity is added,
-    making it difficult to use for lay users. Also the extension is hardly
-    backwards compatible with the original SKOS model. This means that a wider
-    adoption is needed for this new model to be deemed practical. Finally
-    there is not software support for maintaining such descriptions.
-    </p><p>Without altering the conceptual structure of the SKOS model, there
-    are three versioning strategies that are considered practical:</p><ul>
-        <li><term>Concept evolution</term> - the concept description comprises
-        the entire or partial historical account. This means that the concept
-        URI is maintained stable over time and the changes are incrementally
-        recorded on the concept distinguishing between the latest valid value
-        and the historical trace of values for each property. The strength of
-        this approach is that the URI remains persistent over a long time, but
-        the weakness is that it is more complex to derive the latest correct
-        and valid description of the concept.</li>
+    scope="external">10.1002/asi.20702</xref></fn>. This approach suggests
+    describing concepts at two levels: abstract and concrete. It is clean way
+    of distinguishing transient from intransigent aspects of a concept.
+    However, an additional level of complexity is added by this approach
+    making it difficult to employ the model. Also the extension departs from
+    the initially proposed SKOS model and is hardly backwards compatible with
+    the original design. To become practical, a wider adoption of the model is
+    needed along with software support to maintain such descriptions.
+    </p><p>Currently, the SKOS model covers the needs of most users and no
+    versioning extensions are employed. This means that any versioning
+    strategy should not alter the meaning of the original model. At the
+    Publications Office three versioning strategies are considered practical:
+    <i>concept evolution</i>,<i> concept succession</i> and <i>versioning by
+    concept scheme</i>. In the case of "<i>no versioning</i>" a temporal
+    tracking is still available, but in this case as editions of an evolving
+    dataset, meaning that the content of the dataset is temporally
+    agnostic.</p><p>In order to deal with versioning, regardless of the
+    approach, a few properties are deemed useful in order to mark the concept
+    status, mark validity interval of a concept and eventually specify the
+    successor/predecesor of a concept. The next sections describe each of the
+    strategies along with necessary extensions and an example.</p></section>
 
-        <li><term>Concept succession</term> - the concept description has no
-        historical account but the concept has a validity interval. When the
-        concept description is no longer valid a new successor concept
-        replaces the current one, the latter becoming deprecated. This means
-        that the concept URI is maintained stable over time, but when a new
-        concept is created to replace the current one, then it is marked
-        deprecated thus encouraging the users to switch and start using the
-        new URI.</li>
+    <section><title>Concept evolution</title><p>Adopting the <term>concept
+    evolution</term> means that the concept description comprises the entire
+    or partial historical account. In this approach the the concept URI
+    remains stable (fixed) in time while the changes in the property values
+    are incrementally recorded on the concept. The properties must be reified
+    and each record has a validity period to it and (eventually) a status
+    distinguishing between the latest valid value and its historical traces.
+    The strength of this approach is that the URI remains persistent over time
+    (even though its description evolves). The downside of such an approach is
+    the high rick of completely redefining the meaning associated with an URI.
+    In practice it becomes more difficult to maintain a dataset which
+    implements this approach and it is also harder to query at least to
+    determine the latest valid description of the concept.</p></section>
 
-        <li><term>Versioning by concept scheme</term> - the concept schemes
-        function as version containers. This approach resembles slightly the
-        "No versioning" approach, only that each dataset is conceptualised as
-        a concept scheme. A concept belongs to as many concept schemes for as
-        long it is current. The concept scheme provides validity interval or
-        publication date.</li>
-
-        <li><term>No versioning</term> - keep the versioning issue outside the
-        content. Versions are maintained as separate editions of the evolving
-        dataset.</li>
-      </ul></section>
-
-    <section><title>Necessary extensions</title><p>In order to deal with
-    versioning, regardless of the approach, a few properties are deemed useful
-    in order to mark the concept status, mark validity interval of a concept
-    and eventually specify the successor/predecesor of a concept.</p><p>In
-    order to accommodate the <b>concept versioning</b>, the properties for
+    <p>In order to accommodate the concept versioning, the properties for
     which the historicity is important or necessary, have to be reified is
     some way. The recommendations are provided in the "RDF Primer"<fn> Miller,
     E., &amp; Manola, F. (2004). RDF Primer. <xref format="html"
@@ -152,10 +140,11 @@
     href="http://publications.europa.eu/resource/authority/corporate-body"
     scope="external">CorporateBody authority table</xref> has several pref
     labels out of which only the last one is valid and the first two are
-    deprecated each having a validity period.</p><codeblock><xref
-          format="html"
-          href="http://publications.europa.eu/resource/authority/corporate-body/MARE"
-          scope="external">corporate-body:MARE</xref> a skos:Concept ;
+    deprecated each having a validity period.</p>
+
+    <codeblock><xref format="html"
+        href="http://publications.europa.eu/resource/authority/corporate-body/MARE"
+        scope="external">corporate-body:MARE</xref> a skos:Concept ;
   skosxl:prefLabel [
     euvoc:startDate "1977-01-01"; 
     euvoc:endDate "1999-07-30";
@@ -171,14 +160,28 @@
   skoxl:prefLabel [
     euvoc:startDate "2005-01-13";
     skosxl:literalValue "Directorate-General for Maritime Affairs and Fisheries".
-  ].</codeblock><p><b>Concept succession</b> requires a slightly different
-    extension. The need for specifying status and validity interval still
-    remains and in addition there needs to be a way to also specify connection
-    between the old and the new superseding concept. In the listing below is
-    provided an example of how concept succession may be instantiated.
-    </p><codeblock><xref format="html"
-          href="http://publications.europa.eu/resource/authority/corporate-body/EEC"
-          scope="external">corporate-body:EEC</xref> a skos:Concept ;
+  ].</codeblock>
+
+    <section><title>Concept succession</title></section>
+
+    <p>The <term>concept succession</term> differs from the concept evolution.
+    It means that the concept description has no historical account but the
+    concept itself has a validity interval. When the concept description is no
+    longer valid then a new successor concept replaces the current one and the
+    latter becomes deprecated. This implies that the concept URI is maintained
+    stable over time, but when a new concept is created to replace the current
+    one, then the users are encouraged to switch and start using the new
+    URI.</p>
+
+    <p>Concept succession requires a slightly different extension. The need
+    for specifying status and validity interval still remains and in addition
+    there needs to be a way to also specify connection between the old and the
+    new superseding concept. In the listing below is provided an example of
+    how concept succession may be instantiated.</p>
+
+    <codeblock><xref format="html"
+        href="http://publications.europa.eu/resource/authority/corporate-body/EEC"
+        scope="external">corporate-body:EEC</xref> a skos:Concept ;
   skos:prefLabel "European Economic Community".
   euvoc:startDate "1958-01-01";
   euvoc:endDate "1993-10-31";
@@ -186,25 +189,37 @@
   dct:isReplacedBy corporate-body:EURCOM.
 
 <xref format="html"
-          href="http://publications.europa.eu/resource/authority/corporate-body/EURCOM"
-          scope="external">corporate-body:EURCOM</xref> a skos:Concept ;
+        href="http://publications.europa.eu/resource/authority/corporate-body/EURCOM"
+        scope="external">corporate-body:EURCOM</xref> a skos:Concept ;
   skos:prefLabel "European Economic Community".
   euvoc:startDate "1993-11-01"; 
   euvoc:endDate "2009-11-30";
   owl:deprecated "true";
   dct:isReplacedBy corporate-body:EURUN.
 <xref format="html"
-          href="http://publications.europa.eu/resource/authority/corporate-body/EURUN"
-          scope="external">
+        href="http://publications.europa.eu/resource/authority/corporate-body/EURUN"
+        scope="external">
 corporate-body:EURUN</xref> a skos:Concept ;
   skos:prefLabel "European Union".
   euvoc:startDate "2009-12-01".
 
-</codeblock><p><b>Versioning by concept scheme</b> does not require any SKOS
-    extensions, at least not for concept descriptions. It is recommended
-    however to describe evolution of concept schemes using similar means as
-    above. In the listing below is provided an example how versioning by
-    concept scheme may be instantiated. </p><codeblock>nuts-scheme:2010 a skos:ConceptScheme;
+</codeblock>
+
+    <section><title>Versioning by concept scheme</title><p>In<term> versioning
+    by concept scheme</term> means that the concept scheme function as version
+    marker and container. This approach resembles slightly the "No versioning"
+    approach where the entire dataset is versioned as a whole. The difference
+    is that all version concept scheme are maintained in a single dataset.
+    This way. a concept may belongs to as many version concept schemes for as
+    long it is current and if it is deprecated then it is simply omitted in
+    the future concept schemes. Each version concept scheme provides a
+    description of the validity interval or publication date.</p><p>Versioning
+    by concept scheme does not require any SKOS extensions, at least not for
+    concept descriptions. It is recommended however to describe evolution of
+    concept schemes using similar means as described above for concepts, i.e.
+    employing validity interval, a status and successorship relations. In the
+    listing below is provided an example how versioning by concept scheme may
+    be instantiated. </p><codeblock>nuts-scheme:2010 a skos:ConceptScheme;
   skos:prefLabel "Nomenclature of territorial units for statistics";
   owl:versionInfo "version 2010";
   dct:isReplacedBy nuts-scheme:2013.
@@ -221,5 +236,10 @@ nuts-code:UKK42 a skosConcept;
 nuts-code:UKD37 a skosConcept;
   skos:prefLabel "Greater Manchester North East";
   skos:inScheme nuts-scheme2013.</codeblock></section>
+
+    <p>This section presented three strategies to version the SKOS content.
+    Each of these approaches is supported by this application profile and it
+    is up to the dataset authors to decide how the content evolves in time and
+    is historicity maintained.</p>
   </body>
 </topic>
