--- a/skos-ap-eu/doc/skos-ap-eu-introduction.dita
+++ b/skos-ap-eu/doc/skos-ap-eu-introduction.dita
@@ -5,25 +5,20 @@
   <title>Introduction</title>
 
   <body>
-    <p>This document defines the application profile of SKOS assets managed
-    using VocBench3<fn> Stellato, A., Fiorelli, M., Turbati, A., Lorenzetti,
-    T., Van Gemert, W.,Dechandon, D., Laaboudi-Spoiden, C., Gerencser, A.,
-    Waniart, A.,Costetchi, E., and Keizer, J. (forthcoming). VocBench 3: a
-    Collab-orative Semantic Web Editor for Ontologies, Thesauri and
-    Lexicons.Semantic Web journal. <xref format="html"
-    href="http://www.semantic-web-journal.net/content/vocbench-3-collaborative-semantic-web-editor-ontologies-thesauri-and-lexicons-1"
-    scope="external">link</xref></fn>. <term>VocBench3</term> is a web-based,
-    multilingual, collaborative development platform for managing OWL
-    ontologies, SKOS(XL) thesauri and generic RDF datasets. <term>SKOS</term>
-    is a common data model for sharing and linking knowledge organization
-    systems via the Web. The SKOS data model provides a standard, low-cost
-    migration path for porting existing knowledge organization systems to the
-    Semantic Web. SKOS also provides a lightweight, intuitive language for
-    developing and sharing new knowledge organization systems. It may be used
-    on its own, or in combination with formal knowledge representation
-    languages such as the Web Ontology language (OWL)<fn>Bechhofer, S., &amp;
-    Miles, A. (2009). SKOS Simple Knowledge Organization System Reference.
-    <xref format="html" href="https://www.w3.org/TR/skos-reference/"
+    <p>This document defines the application profile that can be used to
+    publish and exchange controlled vocabularies and reference data (named
+    authority lists, thesauri, taxonomies, classifications, subject headings,
+    etc.). This application profile is based on the Simple Knowledge
+    Organisation System (SKOS), which is a common data model for sharing and
+    linking knowledge organization systems via the Web. The SKOS data model
+    provides a standard, low-cost migration path for porting existing
+    knowledge organization systems to the Semantic Web. SKOS also provides a
+    lightweight, intuitive language for developing and sharing new knowledge
+    organization systems. It may be used on its own, or in combination with
+    formal knowledge representation languages such as the Web Ontology
+    language (OWL)<fn>Bechhofer, S., &amp; Miles, A. (2009). SKOS Simple
+    Knowledge Organization System Reference. <xref format="html"
+    href="https://www.w3.org/TR/skos-reference/"
     scope="external">https://www.w3.org/TR/skos-reference/</xref></fn>.</p>
 
     <p>The scope of the application profile is originally intended for, but
